@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.5 2015/11/03 23:33:30 agc Exp $
+$NetBSD: distinfo,v 1.6 2019/07/31 20:30:02 brook Exp $
 
-SHA1 (R/spacetime_1.1-4.tar.gz) = 495aaf322c6cc43d82292ac0fc093d14a1c02173
-RMD160 (R/spacetime_1.1-4.tar.gz) = 1a59a4e6e1e47c044e9456be7660e51d01c7c6f8
-SHA512 (R/spacetime_1.1-4.tar.gz) = ba6e185f4d506d5e734bb41dadc5bb1a779bf9bd7f00b9c4dfb8dd5ed780f3ec8f978ce019628266e9117665855c85244168ef14e068217e18ac4efed6f124f5
-Size (R/spacetime_1.1-4.tar.gz) = 3013768 bytes
+SHA1 (R/spacetime_1.2-2.tar.gz) = 95130673bc8fa4aac41f2a7fa2f1e9c6300430ca
+RMD160 (R/spacetime_1.2-2.tar.gz) = db9ad8a9122430371600295597d5afec1b06c50a
+SHA512 (R/spacetime_1.2-2.tar.gz) = f9a671a402487b40e346abe5de75486422235688c4e5ad1dcb02190a80859c035f9166df5da3ba4db20334c0449f56920ad31992adbf4c230cda591abfde9e76
+Size (R/spacetime_1.2-2.tar.gz) = 3001357 bytes
